package sample;

import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.control.Button;
import javafx.scene.control.TextField;

import java.net.URL;
import java.util.ResourceBundle;

public class LogIn implements Initializable {

    @FXML Button logInButton, createAccountButton;
    @FXML TextField emailField, passField;


    @Override
    public void initialize(URL location, ResourceBundle resources) {

    }

    @FXML
    public void logInClick(){

    }

}
