@startuml

title __LABORATION2's Class Diagram__\n

  package sample {
    class DBConnection {
    }
  }
  

  package sample {
    class Login {
    }
  }
  

  package sample {
    class Main {
    }
  }
  

  package sample {
    class MainScreen {
    }
  }
  

  Login -up-|> Initializable
  Login o-- DBConnection : dbc
  Main -up-|> Application
  MainScreen -up-|> Initializable
  MainScreen o-- DBConnection : dbc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
